# haskellx-2015

./: README.md  createdb.sh  haskellx2015.cabal  slides.sh  stack.yaml
code/: API.hs  Auth.hs  DB.hs  Files.hs  db.sql  main.hs
code/talk-examples/: api1.js  example1.hs
slides/: talk.html  talk.md
ui/: footer.tpl  header.tpl  login.tpl  register.tpl  register_result.tpl  upload.tpl  upload_result.tpl  user_profile.tpl
